k8s/03-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planner-db
spec:
  selector:
    app: planner-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
