k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planner-ingress
spec:
  rules:
  - host: course-planner-s22modi.k8s.csclub.cloud
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
